--- a/glfwVisualStudioSetup/glfwVisualStudioSetup.vcxproj.filters
+++ b/glfwVisualStudioSetup/glfwVisualStudioSetup.vcxproj.filters
@@ -57,7 +57,7 @@
     <ClCompile Include="..\dependences\stb_truetype\src\stb_truetype.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Shader.cpp">
+    <ClCompile Include="src\Shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
